fix: intro section overflow on mobile

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -10,6 +10,7 @@
 }
 
 .intro {
+  overflow-x  : hidden;
   --size-icon : 12.5rem;
   @include mx.desktop() {
 	flex-direction : row-reverse;
